--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/media.css">
     <title>Music Player</title>
 </head>
 
 <body>
+    <!-- Mobile Navigation -->
+    <div class="mobile-nav">
+        <i class="bi bi-list menu-toggle"></i>
+    </div>
+
     <header>
         <div class="menu_side">
             <h6 id="menu_list_active_button"><i class="bi bi-music-note-list"></i></h6>
@@ -65,6 +70,13 @@
                     <!-- Popular songs will be populated by JavaScript -->
                 </div>
             </div>
+        </div>
+
+        <!-- Mobile Controls -->
+        <div class="mobile-controls">
+            <i class="bi bi-skip-start-fill" id="mobile_back"></i>
+            <i class="bi bi-play-fill" id="mobile_play"></i>
+            <i class="bi bi-skip-end-fill" id="mobile_next"></i>
         </div>
 
         <div class="master_play">
@@ -150,7 +162,6 @@
             </div>
         </div>
     </header>
-    <script src="app.js"></script>
 
     <!-- Login Modal -->
     <div id="loginModal" class="modal">
@@ -164,6 +175,7 @@
             <div id="loginMsg"></div>
         </div>
     </div>
+
     <!-- Signup Modal -->
     <div id="signupModal" class="modal">
         <div class="modal-content">
@@ -176,6 +188,8 @@
             <div id="signupMsg"></div>
         </div>
     </div>
+
+    <script src="static/app.js"></script>
 </body>
 
 </html>
